# rusty-chat

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
SCRIPTS/: ws_client.py
migrations/: 0002_create_rooms_table.sql  0003_create_messages_table.sql  001_initial_schema.sql
src/: lib.rs  main.rs  ws_server.rs  ws_session.rs
src/config/: settings.rs
src/database/: connection.rs
src/handlers/: auth.rs  broadcast.rs  message_broadcast.rs  mod.rs  rooms.rs  users.rs
src/middleware/: auth.rs
src/models/: auth.rs  message.rs  message_types.rs  mod.rs  room.rs  user.rs
src/requests/: mod.rs  room_requests.rs
src/routes/: api.rs  ws.rs
src/services/: auth.rs
src/utils/: helpers.rs  jwt.rs  mod.rs  types.rs
